--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Md Ishat-E-Rabban"
   pronouns         : # example: "she/her"  
-  bio              : "Research assistant at University of Maryland College Park | MSc in CS | Actively seeking SWE/SDE roles | Robotics, ML, Geometric Computing, Algorithms enthusiast"
+  bio              : "Research assistant at University of Maryland College Park | MSc in CS | Actively seeking SWE/SDE roles | Expert in Robotic Planning, Deep Learning, Spatial/Graph Data Processing, and 3D Visualization"
   location         : #"Earth"
   employer         : #"University of Maryland College Park"
   uri              : # URL
