--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Md Ishat-E-Rabban"
   pronouns         : # example: "she/her"  
-  bio              : "Research assistant at University of Maryland College Park | MSc in CS | Actively seeking SWE/SDE roles | Expert in Robotic Planning, Deep Learning, Spatial/Graph Data Processing, and 3D Visualization"
+  bio              : "Research assistant at the University of Maryland College Park | M.Sc. in CS | Expert in Robotic Planning, Deep Learning, Spatial/Graph Data Processing, and 3D Visualization | Actively seeking software/ML/robotics engineer roles"
   location         : #"Earth"
   employer         : #"University of Maryland College Park"
   uri              : # URL
