--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Md Ishat-E-Rabban"
   pronouns         : # example: "she/her"  
-  bio              : "Research assistant at the University of Maryland College Park | M.Sc. in CS | Expert in Deep Learning, Robotic Planning, Spatial/Graph Data Processing, and 3D Visualization | Actively seeking software/ML/robotics engineer roles"
+  bio              : "Research assistant at the University of Maryland College Park | M.Sc. in CS | Expert in Spatial/Graph Data Processing, Geometric Computing, Deep Learning, and Robotic Planning | Actively seeking software engineering roles"
   location         : #"Earth"
   employer         : #"University of Maryland College Park"
   uri              : # URL
