updated about me

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Md Ishat-E-Rabban"
   pronouns         : # example: "she/her"  
-  bio              : "SDE at Intel | M.Sc. in CS from UMD College Park | Expert in Deep Learning, Geometric Computing, and Robotic Planning | Actively seeking software engineering roles"
+  bio              : "SDE at Intel | M.Sc. in CS from UMD College Park | Expert in Robotic Planning, Deep Learning, and Geometric Computing | Highly Proficient in C++ and Python"
   location         : #"Earth"
   employer         : #"Intel"
   uri              : # URL
